--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -6,6 +6,15 @@ body {
   margin: 0;
 }
 
+h2 {
+  font-weight: 500;
+}
+
+h3 {
+  font-weight: 500;
+  margin: 0;
+}
+
 .header {
   display: flex;
   align-items: center;
@@ -66,9 +75,6 @@ body {
 .fonctionnement {
   padding: 10px 15px 30px;
 }
-.fonctionnement-titre {
-  font-weight: 500;
-}
 .fonctionnement-etapes {
   background-color: #F6F6F6;
   border-radius: 15px;
@@ -80,6 +86,7 @@ body {
 .fonctionnement-etapes i {
   position: absolute;
   left: 40px;
+  color: #9356DC;
 }
 .fonctionnement-etapes-number {
   display: flex;
@@ -94,8 +101,81 @@ body {
   position: absolute;
   left: 11px;
 }
+.fonctionnement-etapes-texte {
+  font-weight: 500;
+}
 
-section {
+.restaurants {
+  display: flex;
+  flex-direction: column;
   background-color: #F6F6F6;
-  height: 500px;
+  padding: 30px 0;
+}
+.restaurants > * {
+  margin: 10px 20px;
+}
+.restaurants-card {
+  background-color: white;
+  border-radius: 20px;
+  filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+  text-decoration: none;
+  color: black;
+  margin-bottom: 20px;
+}
+.restaurants-card img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  width: 100%;
+  height: 150px;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  position: relative;
+}
+.restaurants-card-content {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px 15px 15px;
+}
+.restaurants-card-content-texte {
+  font-weight: 300;
+}
+.restaurants-card-content-texte-title {
+  font-size: 1em;
+  padding: 5px 0;
+}
+.restaurants-card-new {
+  background-color: #95dfcd;
+  color: #008766;
+  position: relative;
+  left: 78%;
+  margin-bottom: -35px;
+  width: 12%;
+  font-size: 0.6em;
+  padding: 7px 10px;
+  z-index: 100;
+  text-align: center;
+  border-radius: 2px;
+}
+
+.footer {
+  background-color: #353535;
+  color: white;
+  padding: 15px;
+}
+.footer-logo {
+  font-family: "Shrikhand";
+  padding-bottom: 10px;
+}
+.footer-content {
+  display: flex;
+  flex-direction: column;
+}
+.footer-content i {
+  width: 30px;
+}
+.footer-content-links {
+  text-decoration: none;
+  color: white;
+  padding: 2px 0;
 }
