--- a/sass/style.scss
+++ b/sass/style.scss
@@ -39,6 +39,13 @@ $grey-background-color: #F6F6F6;
 body{
     margin: 0;
 }
+h2{
+    font-weight: 500;
+}
+h3{
+    font-weight: 500;
+    margin: 0;
+}
 
 //Haut de page
 
@@ -100,10 +107,6 @@ body{
 
     padding: 10px 15px 30px;
 
-    &-titre{
-        font-weight: 500;
-    }
-
     &-etapes{
         background-color: $grey-background-color;
         border-radius: 15px;
@@ -115,6 +118,7 @@ body{
         i{
             position: absolute;
             left: 40px;
+            color: $main-color;
         }
 
         &-number{
@@ -128,12 +132,99 @@ body{
             position: absolute;
             left: 11px;
         }
+
+        &-texte{
+            font-weight: 500;
+        }
     }
 }
 
 //Restaurants
 
-section{
+.restaurants{
+
+    display: flex;
+    flex-direction: column;
     background-color: $grey-background-color;
-    height: 500px;
+    padding: 30px 0;
+
+    & > *{
+        margin: 10px 20px;
+    }
+
+    &-card{
+        background-color: white;
+        border-radius: 20px;
+        filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
+        text-decoration: none;
+        color: black;
+        margin-bottom: 20px;
+
+        img{
+            object-fit: cover;
+            width: 100%;
+            height: 150px;
+            border-top-left-radius: 20px;
+            border-top-right-radius: 20px;
+            position: relative;
+        }
+
+        &-content{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 5px 15px 15px;
+
+            &-texte{
+
+                font-weight: 300;
+                &-title{
+
+                    font-size: 1em;
+                    padding: 5px 0;
+                }
+            }
+        }
+
+        &-new{
+            background-color: #95dfcd;
+            color: #008766;
+            position: relative;
+            left: 78%;
+            margin-bottom: -35px;
+            width: 12%;
+            font-size: 0.6em;
+            padding: 7px 10px;
+            z-index: 100;
+            text-align: center;
+            border-radius: 2px;
+        }
+    }
+}
+
+.footer{
+
+    background-color: $grey-text-color;
+    color: white;
+    padding: 15px;
+
+    &-logo{
+        font-family: 'Shrikhand';
+        padding-bottom: 10px;
+    }
+
+    &-content{
+
+        display: flex;
+        flex-direction: column;
+        i{
+            width: 30px;
+        }
+
+        &-links{
+            text-decoration: none;
+            color: white;
+            padding: 2px 0;
+        }
+    }
 }
