--- a/sass/style.scss
+++ b/sass/style.scss
@@ -26,6 +26,8 @@ $grey-background-color: #F6F6F6;
     background: linear-gradient($secondary-color, $main-color);
     color: white;
     font-weight: 500;
+    font-size: .9em;
+    text-decoration: none;
 }
 
 //Polices
