--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -181,3 +181,25 @@ h3 {
   color: white;
   padding: 2px 0;
 }
+
+.over {
+  position: absolute;
+}
+
+.under {
+  color: #9356DC;
+  transform: scale(0);
+  transition: transform 400ms;
+}
+
+.anim-trigger {
+  position: absolute;
+  width: 18px;
+  height: 18px;
+  opacity: 0;
+  margin: 0;
+  z-index: 99;
+}
+.anim-trigger:checked + .under {
+  transform: scale(1) translateY(-1px);
+}
