--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,27 @@
+@keyframes loader-anim {
+  0% {
+    transform: rotate(0);
+  }
+  75% {
+    opacity: 1;
+  }
+  100% {
+    transform: rotate(360deg);
+    opacity: 0;
+  }
+}
+@keyframes page-return {
+  100% {
+    transform: scale(1);
+  }
+}
 * {
   font-family: "Roboto", sans-serif;
 }
 
-body {
+body, html {
   margin: 0;
+  height: 100%;
 }
 
 h2 {
@@ -13,6 +31,30 @@ h2 {
 h3 {
   font-weight: 500;
   margin: 0;
+}
+
+.div-loader {
+  position: absolute;
+  opacity: 1;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.div-loader-anim {
+  border: solid 2px black;
+  height: 100px;
+  width: 100px;
+  opacity: 1;
+  position: absolute;
+  border-radius: 5px;
+  animation: loader-anim 2465ms forwards;
+}
+
+.page {
+  transform: scale(0);
+  animation: page-return 0s 2465ms forwards;
 }
 
 .header {
@@ -71,7 +113,12 @@ h3 {
   font-weight: 500;
   font-size: 0.9em;
   text-decoration: none;
+  box-shadow: 0px 0px 3px grey;
   width: 50%;
+}
+.intro-button:active {
+  background: linear-gradient(#ff93e1, #a16be0);
+  box-shadow: 0px 0px 6px grey;
 }
 
 .fonctionnement {
@@ -198,7 +245,7 @@ h3 {
   height: 18px;
   opacity: 0;
   margin: 0;
-  z-index: 99;
+  z-index: 2;
 }
 .anim-trigger:checked + .under {
   transform: scale(1) translateY(-1px);
