--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,9 @@ $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 $grey-text-color: #353535;
 $grey-background-color: #F6F6F6;
-$duration-loader: random($limit: 2000)+1000 *1ms;
+$duration-loader: 0s;/* random($limit: 2000)+1000 *1ms; */
+
+$bp-desktop: 1024px;
 
 //Mixins
 
@@ -18,22 +20,6 @@ $duration-loader: random($limit: 2000)+1000 *1ms;
 @mixin x-centered{
     display: flex;
     justify-content: center;
-}
-
-@mixin button-style{
-    padding: 10px 0px;
-    border-radius: 30px;
-    border: 0;
-    background: linear-gradient($secondary-color, $main-color);
-    color: white;
-    font-weight: 500;
-    font-size: .9em;
-    text-decoration: none;
-    box-shadow: 0px 0px 3px grey;
-    &:active{
-        background: linear-gradient(lighten($secondary-color, 5%), lighten($main-color, 5%));
-        box-shadow: 0px 0px 6px grey;
-    }
 }
 
 //Animations
@@ -65,8 +51,11 @@ $duration-loader: random($limit: 2000)+1000 *1ms;
 
 //Général
 
-body, html{
+body{
     margin: 0;
+}
+
+.height100{
     height: 100%;
 }
 
@@ -103,6 +92,28 @@ h3{
     animation: page-return 0s $duration-loader forwards;
 }
 
+.button-style{
+    padding: 12px 15px;
+    border-radius: 30px;
+    border: 0;
+    background: linear-gradient($secondary-color, $main-color);
+    color: white;
+    font-weight: 500;
+    font-size: .9em;
+    text-decoration: none;
+    box-shadow: 0px 0px 3px grey;
+    width: fit-content;
+    &:active{
+        background: linear-gradient(lighten($secondary-color, 5%), lighten($main-color, 5%));
+        box-shadow: 0px 0px 6px grey;
+    }
+    @media (min-width: $bp-desktop) {
+        &:hover{
+            background: linear-gradient(lighten($secondary-color, 5%), lighten($main-color, 5%));
+            box-shadow: 0px 0px 6px grey;
+        }
+    }
+}
 
 //Haut de page
 
@@ -113,7 +124,15 @@ h3{
     position: relative;
     z-index:1;
     img{
-        width: 50%;
+        width: 50%;    
+        @media (min-width: $bp-desktop) {
+            width: 15%;
+            padding: 15px;
+        }
+    }
+
+    @media (min-width: $bp-desktop) {
+        box-shadow: none;
     }
 }
 
@@ -137,7 +156,6 @@ h3{
 
     & > *{
         text-align: center;
-        width: 75%;
         margin-bottom: 15px;
     }
 
@@ -145,24 +163,29 @@ h3{
         font-size: 1.5em;
         margin: 0 0 15px 0;
         font-weight: 500;
+        width: 75%;
+        @media (min-width: $bp-desktop) {
+            font-size: 2.5em;
+        }
     }
 
     &-texte{
         color: $grey-text-color;
         font-weight: 300;
-    }
-
-    &-button{
-        @include button-style();
-        width: 50%;
+        width: 75%;
     }
 }
 
 //Fonctionnement
 
+.container-fonctionnement{
+    @include x-centered();
+}
+
 .fonctionnement{
 
     padding: 10px 15px 30px;
+    width: 1024px;
 
     &-etapes{
         background-color: $grey-background-color;
@@ -171,10 +194,13 @@ h3{
         margin: 15px 5px;
         box-shadow: 0px 4px 5px lightgray;
         text-align: center;
+        @media (min-width: $bp-desktop) {
+            width: 27%;
+        }
 
         i{
+            display: flex;
             position: absolute;
-            left: 40px;
             color: $main-color;
         }
 
@@ -187,16 +213,38 @@ h3{
             color: white;
             font-size: 0.6em;
             position: absolute;
-            left: 11px;
+            margin-left: -27px;
         }
 
         &-texte{
             font-weight: 500;
         }
     }
+
+    .etapes-container{
+        @media (min-width: $bp-desktop) {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
 }
 
 //Restaurants
+
+/* .container-restaurants{
+    background-color: $grey-background-color;
+    @media (min-width: $bp-desktop) {
+        @include x-centered();
+    }
+}
+
+.container-card{
+    @media (min-width: $bp-desktop) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+    }
+} */
 
 .restaurants{
 
@@ -204,6 +252,19 @@ h3{
     flex-direction: column;
     background-color: $grey-background-color;
     padding: 30px 0;
+
+/*     @media (min-width: $bp-desktop) {
+        width: $bp-desktop;
+
+        .restaurants-card{
+            width: 45%;
+            margin-bottom: 60px;
+        }
+
+        & > *{
+            margin: 0;
+        }
+    } */
 
     & > *{
         margin: 10px 20px;
@@ -231,6 +292,7 @@ h3{
             justify-content: space-between;
             align-items: center;
             padding: 5px 15px 15px;
+            //background-color: white;
 
             &-texte{
 
@@ -259,6 +321,30 @@ h3{
     }
 }
 
+.over{
+    position: absolute;
+}
+
+.under{
+    color: $main-color;
+    transform: scale(0);
+    transition: transform 400ms;
+}
+
+.anim-trigger{
+    position: absolute;
+    width: 18px;
+    height: 18px;
+    opacity: 0;
+    margin: 0;
+    z-index: 2;
+    &:checked + .under{
+        transform: scale(1) translateY(-1px);
+    }
+}
+
+//Footer
+
 .footer{
 
     background-color: $grey-text-color;
@@ -283,27 +369,5 @@ h3{
             color: white;
             padding: 2px 0;
         }
-    }
-}
-
-.over{
-    position: absolute;
-}
-
-.under{
-    color: $main-color;
-    transform: scale(0);
-    transition: transform 400ms;
-}
-
-.anim-trigger{
-    position: absolute;
-    width: 18px;
-    height: 18px;
-    opacity: 0;
-    margin: 0;
-    z-index: 2;
-    &:checked + .under{
-        transform: scale(1) translateY(-1px);
     }
 }
