--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,7 +5,7 @@ $secondary-color: #FF79DA;
 $tertiary-color: #99E2D0;
 $grey-text-color: #353535;
 $grey-background-color: #F6F6F6;
-$duration-loader: 0s;/* random($limit: 2000)+1000 *1ms; */
+$duration-loader: random($limit: 2000)+1000 *1ms;
 
 $bp-desktop: 1024px;
 
@@ -68,7 +68,6 @@ h3{
 }
 
 .div-loader{
-    //background-color: pink;
     position: absolute;
     opacity: 1;
     height: 100%;
@@ -126,7 +125,7 @@ h3{
     img{
         width: 50%;    
         @media (min-width: $bp-desktop) {
-            width: 15%;
+            width: 200px;
             padding: 15px;
         }
     }
@@ -231,20 +230,12 @@ h3{
 
 //Restaurants
 
-/* .container-restaurants{
+.container-restaurants{
     background-color: $grey-background-color;
     @media (min-width: $bp-desktop) {
         @include x-centered();
     }
 }
-
-.container-card{
-    @media (min-width: $bp-desktop) {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: space-between;
-    }
-} */
 
 .restaurants{
 
@@ -253,21 +244,12 @@ h3{
     background-color: $grey-background-color;
     padding: 30px 0;
 
-/*     @media (min-width: $bp-desktop) {
-        width: $bp-desktop;
-
-        .restaurants-card{
-            width: 45%;
-            margin-bottom: 60px;
-        }
-
-        & > *{
-            margin: 0;
-        }
-    } */
-
-    & > *{
+    &-titre, .container-card{
         margin: 10px 20px;
+    }
+
+    a{
+        text-decoration: none;
     }
 
     &-card{
@@ -276,7 +258,7 @@ h3{
         filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
         text-decoration: none;
         color: black;
-        margin-bottom: 20px;
+        margin-bottom: 30px;
 
         img{
             object-fit: cover;
@@ -317,6 +299,32 @@ h3{
             z-index: 100;
             text-align: center;
             border-radius: 2px;
+        }
+    }
+
+    @media (min-width: $bp-desktop) {
+
+        width: $bp-desktop;
+        padding-bottom: 0;
+
+        &-titre, .container-card{
+            margin: 15px 0px;
+        }
+
+        .container-card{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: space-between;
+            margin-bottom: 0;
+        }
+
+        a{
+            width: 45%;
+            margin-bottom: 40px;
+        }
+
+        &-card{
+            margin-bottom: 0px;
         }
     }
 }
@@ -368,6 +376,28 @@ h3{
             text-decoration: none;
             color: white;
             padding: 2px 0;
+        }
+    }
+
+    @media (min-width: $bp-desktop){
+        display: flex;
+        justify-content: end;
+        align-items: end;
+        flex-direction: row-reverse;
+
+        height: 50px;
+
+        &-content{
+            display: flex;
+            flex-direction: row;
+
+            &-links{
+                padding: 2px 15px;
+            }
+        }
+
+        &-logo{
+            padding: 0px 30px;
         }
     }
 }
