--- a/sass/partials/_common.scss
+++ b/sass/partials/_common.scss
@@ -6,6 +6,7 @@ $tertiary-color: #99E2D0;
 $grey-text-color: #353535;
 $grey-background-color: #F6F6F6;
 $duration-loader: 0ms;/* random($limit: 2000)+1000 *1ms; */
+$duration-coche: 1000ms;
 
 $bp-desktop: 1024px;
 
