--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -72,7 +72,7 @@
                         border-radius: 15px;
                         width: 100%;
                         filter: drop-shadow(0px 3px 15px rgba(0, 0, 0, 0.1));
-                        transition: width 1000ms, border-top-right-radius 1000ms, border-bottom-right-radius 1000ms;
+                        transition: width $duration-coche, border-top-right-radius $duration-coche, border-bottom-right-radius $duration-coche;
 
                         &-content > *,&-prix{
                             margin: 10px;
@@ -104,7 +104,7 @@
                         border-top-right-radius: 15px;
                         border-bottom-right-radius: 15px;
                         transform: scaleX(0);
-                        transition: transform 1000ms;
+                        transition: transform $duration-coche;
                         transform-origin: right;
                         position: absolute;
                         z-index: 100;
