--- a/sass/partials/_common.scss
+++ b/sass/partials/_common.scss
@@ -142,6 +142,7 @@ h3{
 
 .over{
     position: absolute;
+    transform: scale(1.5);
 }
 
 .under{
@@ -159,6 +160,6 @@ h3{
     z-index: 2;
     display: none;
     &:checked + .under{
-        transform: scale(1) translateY(-1px);
+        transform: scale(1.5) translateY(-1px);
     }
 }
