--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -1,5 +1,16 @@
 @import "./partials/common";
 
+@mixin anim-plats-mixin($translate, $duration, $delay){
+    transform: translateX($translate);
+    animation: anim-plats $duration $delay forwards;
+}
+
+@keyframes anim-plats{
+    100%{
+        transform: translate(0);
+    }
+}
+
 .header{
     justify-content: space-between;
     a, &-right{
@@ -47,6 +58,8 @@
 
             padding-bottom: 15px;
             &-titreContainer{
+                @include anim-plats-mixin(-100px, 600ms, 0ms);
+
                 padding-bottom: 15px;
                 &-titre{
                     font-weight: 300;
@@ -62,6 +75,7 @@
                 display: flex;
                 flex-direction: column;
                 &-cardContainer{
+
                     display: flex;
                     padding-bottom: 10px;
                     &-card{
@@ -108,7 +122,7 @@
                         transform-origin: right;
                         position: absolute;
                         z-index: 100;
-                        right: 15px;
+                        right: 0px;
 
                         i{
                             transform: scale(1.5);
@@ -133,7 +147,7 @@
     }
 }
 
-.anim-plats{
+.anim-coche{
 
     display: none;
     &:checked ~ .menu-corps-plats-content-cardContainer{
@@ -148,3 +162,10 @@
         }
     }
 }
+
+@for $i from 1 through 9 {
+    .mixin-call#{$i}{
+        @include anim-plats-mixin(-1000px, 1000ms, $i*100ms);
+    }
+}
+
