--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -12,11 +12,10 @@
 }
 
 .header{
-    justify-content: space-between;
-    a, &-right{
-        width: 10%;
+    a{
         transform: scale(1.5);
-        padding: 0 10px;
+        position: absolute;
+        left: 25px;
     }
     box-shadow: none;
 
@@ -27,8 +26,18 @@
 
 .background{
     width: 100%;
+    object-fit: cover;
+    object-position: 50% 60%;
+    @media (min-width: $bp-desktop) {
+        height: 500px;
+    }
 }
 
+.container-menu{
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+}
 .menu{
 
     width: 100%;
@@ -43,6 +52,7 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+
         padding: 0 20px;
         h2{
             font-family: 'Shrikhand';
@@ -105,9 +115,6 @@
                                 font-weight: 300;
                             }
                         }
-                        &-prix{
-                            transition: transform 400ms;
-                        }
                     }
 
                     &-divAnim{
@@ -145,6 +152,29 @@
             font-size: 1.2em;
         }
     }
+
+    @media (min-width: $bp-desktop) {
+        width: 80%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+
+        &-titre{
+            width: 30%;
+            justify-content: center;
+            h2{
+                padding-right: 15px;
+            }
+        }
+
+        &-corps{
+            width: 60%;
+        }
+
+        &-boutton{
+            width: 50%;
+        }
+    }
 }
 
 .anim-coche{
@@ -166,6 +196,9 @@
 @for $i from 1 through 9 {
     .mixin-call#{$i}{
         @include anim-plats-mixin(-1000px, 1000ms, $i*100ms);
+        @media (min-width: $bp-desktop) {
+            @include anim-plats-mixin(-1500px, 1000ms, $i*100ms);
+        }
     }
 }
 
