--- a/assets/css/restaurants.css
+++ b/assets/css/restaurants.css
@@ -156,6 +156,7 @@ h3 {
 
 .background {
   width: 100%;
+  height: 275px;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: 50% 60%;
@@ -261,7 +262,7 @@ h3 {
   transition: transform 1000ms;
   transform-origin: right;
   position: absolute;
-  z-index: 100;
+  z-index: 2;
   right: 0px;
 }
 .menu-corps-plats-content-cardContainer-divAnim i {
@@ -304,7 +305,19 @@ h3 {
 }
 
 .anim-coche {
-  display: none;
+  position: absolute;
+  left: 0%;
+  top: 15px;
+  z-index: 3;
+  width: 100%;
+  height: 38px;
+  opacity: 0;
+}
+@media (min-width: 1024px) {
+  .anim-coche {
+    top: 0px;
+    height: 68px;
+  }
 }
 .anim-coche:checked ~ .menu-corps-plats-content-cardContainer-card {
   border-top-right-radius: 0;
@@ -317,110 +330,110 @@ h3 {
 
 .mixin-call1 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 100ms forwards;
+  animation: anim-plats 0ms 100ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call1 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 100ms forwards;
+    animation: anim-plats 0ms 100ms forwards;
   }
 }
 
 .mixin-call2 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 200ms forwards;
+  animation: anim-plats 0ms 200ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call2 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 200ms forwards;
+    animation: anim-plats 0ms 200ms forwards;
   }
 }
 
 .mixin-call3 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 300ms forwards;
+  animation: anim-plats 0ms 300ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call3 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 300ms forwards;
+    animation: anim-plats 0ms 300ms forwards;
   }
 }
 
 .mixin-call4 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 400ms forwards;
+  animation: anim-plats 0ms 400ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call4 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 400ms forwards;
+    animation: anim-plats 0ms 400ms forwards;
   }
 }
 
 .mixin-call5 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 500ms forwards;
+  animation: anim-plats 0ms 500ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call5 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 500ms forwards;
+    animation: anim-plats 0ms 500ms forwards;
   }
 }
 
 .mixin-call6 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 600ms forwards;
+  animation: anim-plats 0ms 600ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call6 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 600ms forwards;
+    animation: anim-plats 0ms 600ms forwards;
   }
 }
 
 .mixin-call7 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 700ms forwards;
+  animation: anim-plats 0ms 700ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call7 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 700ms forwards;
+    animation: anim-plats 0ms 700ms forwards;
   }
 }
 
 .mixin-call8 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 800ms forwards;
+  animation: anim-plats 0ms 800ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call8 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 800ms forwards;
+    animation: anim-plats 0ms 800ms forwards;
   }
 }
 
 .mixin-call9 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 900ms forwards;
+  animation: anim-plats 0ms 900ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call9 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 900ms forwards;
+    animation: anim-plats 0ms 900ms forwards;
   }
 }
 
 .mixin-call10 {
   transform: translateX(-1000px);
-  animation: anim-plats 1000ms 1000ms forwards;
+  animation: anim-plats 0ms 1000ms forwards;
 }
 @media (min-width: 1024px) {
   .mixin-call10 {
     transform: translateX(-1500px);
-    animation: anim-plats 1000ms 1000ms forwards;
+    animation: anim-plats 0ms 1000ms forwards;
   }
 }
