--- a/sass/partials/_common.scss
+++ b/sass/partials/_common.scss
@@ -7,6 +7,7 @@ $grey-text-color: #353535;
 $grey-background-color: #F6F6F6;
 $duration-loader: 0ms;/* random($limit: 2000)+1000 *1ms; */
 $duration-coche: 1000ms;
+$duration-plats: 0ms;
 
 $bp-desktop: 1024px;
 $bp-intermediaire: 430px;
