--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -290,6 +290,7 @@ h3 {
 }
 .restaurants a {
   text-decoration: none;
+  color: black;
 }
 .restaurants-card {
   background-color: white;
@@ -348,11 +349,8 @@ h3 {
     justify-content: space-between;
     margin-bottom: 0;
   }
-  .restaurants a {
+  .restaurants-card {
     width: 45%;
     margin-bottom: 40px;
-  }
-  .restaurants-card {
-    margin-bottom: 0px;
   }
 }
