--- a/sass/restaurants.scss
+++ b/sass/restaurants.scss
@@ -26,6 +26,7 @@
 
 .background{
     width: 100%;
+    height: 275px;
     object-fit: cover;
     object-position: 50% 60%;
     @media (min-width: $bp-desktop) {
@@ -128,7 +129,7 @@
                         transition: transform $duration-coche;
                         transform-origin: right;
                         position: absolute;
-                        z-index: 100;
+                        z-index: 2;
                         right: 0px;
 
                         i{
@@ -179,7 +180,19 @@
 
 .anim-coche{
 
-    display: none;
+    //display: none;
+    position: absolute;
+    left: 0%;
+    top: 15px;
+    z-index: 3;
+    width: 100%;
+    height: 38px;
+    opacity: 0;
+
+    @media (min-width: $bp-desktop) {
+        top: 0px;
+        height: 68px;
+    }
     &:checked ~ .menu-corps-plats-content-cardContainer{
         &-card{
             border-top-right-radius: 0;
@@ -195,9 +208,9 @@
 
 @for $i from 1 through 10 {
     .mixin-call#{$i}{
-        @include anim-plats-mixin(-1000px, 1000ms, $i*100ms);
+        @include anim-plats-mixin(-1000px, $duration-plats, $i*100ms);
         @media (min-width: $bp-desktop) {
-            @include anim-plats-mixin(-1500px, 1000ms, $i*100ms);
+            @include anim-plats-mixin(-1500px, $duration-plats, $i*100ms);
         }
     }
 }
