--- a/sass/style.scss
+++ b/sass/style.scss
@@ -165,6 +165,7 @@
 
     a{
         text-decoration: none;
+        color: black;
     }
 
     &-card{
@@ -233,13 +234,9 @@
             margin-bottom: 0;
         }
 
-        a{
+        &-card{
             width: 45%;
             margin-bottom: 40px;
-        }
-
-        &-card{
-            margin-bottom: 0px;
         }
     }
 }
