--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -283,7 +283,7 @@ h3 {
   display: flex;
   flex-direction: column;
   background-color: #F6F6F6;
-  padding: 30px 0;
+  padding: 30px 30px;
 }
 .restaurants-titre, .restaurants .container-card {
   margin: 10px 20px;
