--- a/sass/style.scss
+++ b/sass/style.scss
@@ -157,7 +157,7 @@
     display: flex;
     flex-direction: column;
     background-color: $grey-background-color;
-    padding: 30px 0;
+    padding: 30px 30px;
 
     &-titre, .container-card{
         margin: 10px 20px;
