--- a/assets/css/restaurants.css
+++ b/assets/css/restaurants.css
@@ -1,3 +1,4 @@
+/* random($limit: 2000)+1000 *1ms; */
 body {
   margin: 0;
 }
@@ -118,7 +119,9 @@ h3 {
 }
 
 .under {
-  color: #9356DC;
+  background: linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   transform: scale(0);
   transition: transform 400ms;
 }
