--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* random($limit: 2000)+1000 *1ms; */
 body {
   margin: 0;
 }
@@ -118,7 +119,9 @@ h3 {
 }
 
 .under {
-  color: #9356DC;
+  background: linear-gradient(#9356DC, #FF79DA);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
   transform: scale(0);
   transition: transform 400ms;
 }
@@ -169,12 +172,12 @@ h3 {
   opacity: 1;
   position: absolute;
   border-radius: 5px;
-  animation: loader-anim 1067ms forwards;
+  animation: loader-anim 0ms forwards;
 }
 
 .page {
   transform: scale(0);
-  animation: page-return 0s 1067ms forwards;
+  animation: page-return 0s 0ms forwards;
 }
 
 .localisation {
